apps/immich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  hostnames:
    - immich.int.kyledev.co
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
